Fix CSS overlap with stronger clear and display rules

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,4 @@
----
+﻿---
 ---
 
 @import "{{ site.theme }}";
@@ -7,9 +7,12 @@
 .breadcrumb {
   font-size: 0.85em;
   color: #666;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
   padding-bottom: 0.5em;
   border-bottom: 1px solid #eee;
+  display: block;
+  width: 100%;
+  clear: both;
 }
 
 .breadcrumb a {
@@ -25,18 +28,30 @@
   color: #333;
 }
 
-/* Post layout */
+/* Post layout - fix overlap */
 .post {
-  margin-top: 1em;
+  display: block;
+  clear: both;
+  margin-top: 2em;
+  position: relative;
+}
+
+.post-header {
+  display: block;
+  clear: both;
+  margin-bottom: 1em;
 }
 
 .post-header h1 {
-  margin-bottom: 0.25em;
-  margin-top: 0;
+  margin: 0 0 0.25em 0;
+  padding: 0;
+  display: block;
+  clear: both;
 }
 
 .post-meta {
   display: block;
+  clear: both;
   margin-bottom: 1.5em;
   color: #666;
   font-size: 0.9em;
@@ -44,11 +59,14 @@
 }
 
 .post-content {
+  display: block;
   clear: both;
+  margin-top: 1em;
 }
 
 .post-footer {
   margin-top: 2em;
   padding-top: 1em;
   border-top: 1px solid #eee;
+  clear: both;
 }
